Use Set.of instead of singleton