@@ -26,7 +26,6 @@ import java.util.Set;
 
 import static io.activej.common.Checks.checkArgument;
 import static io.activej.common.Utils.first;
-import static java.util.Collections.singleton;
 import static java.util.Collections.singletonMap;
 
 abstract class AbstractAttributeNodeForLeaf implements AttributeNode {
@@ -49,12 +48,12 @@ abstract class AbstractAttributeNodeForLeaf implements AttributeNode {
 
 	@Override
 	public final Set<String> getAllAttributes() {
-		return singleton(name);
+		return Set.of(name);
 	}
 
 	@Override
 	public final Set<String> getVisibleAttributes() {
-		return visible ? singleton(name) : Collections.emptySet();
+		return visible ? Set.of(name) : Collections.emptySet();
 	}
 
 	@Override
